Sun Sep 14 12:23:15 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* commit.c (check_fileproc): If the file has "conflict
	indicators", spit a warning and proceed with the checkin.
	* sanity.sh (conflicts): Adjust tests conflicts-132,
	conflicts-status-3, conflicts-133, and conflicts-status-4
	for new behavior.

Fri Sep 12 11:12:34 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* add.c, admin.c, checkin.c, checkout.c, classify.c, commit.c,
	create_adm.c, cvsrc.c, diff.c, entries.c, find_names.c, hash.c,
	import.c, lock.c, log.c, logmsg.c, main.c, modules.c, myndbm.c,
	no_diff.c, parseinfo.c, patch.c, rcs.c, rcscmds.c, recurse.c,
	remove.c, repos.c, root.c, rtag.c, status.c, subr.c, tag.c,
	update.c, vers_ts.c, hash.h, rcs.h, options.h.in: Change "CVS 1.4
	kit" to "CVS source distribution".

	* sanity.sh: Comment out call to "whoami".

Thu Sep 11 10:09:04 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* commit.c (classify_file_internal): Add comment about saving
	quiet vs. saving really_quiet.

	* sanity.sh (newb-123j0): Use two regexps instead of assuming that
	expr has "\(", "\|", and "\)".  If we want to require the latter,
	we should check for it up front, rather than let people get
	halfway through and wonder why the test failed.

Tue Sep  9 19:22:44 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* expand_path.c (expand_path): If GETPWNAM_MISSING is defined,
	just give an error instead of calling getpwnam.

	* subr.c (getcaller): If SYSTEM_GETCALLER is defined, call it
	instead of all the getlogin/getpwuid/etc.
	* wrapper.c (wrap_setup): Call get_homedir not getpwuid.

Mon Sep  8 17:54:14 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (basicc): Change ls -1 to echo *; according to
	larry.jones@sdrc.com, ls -1 isn't portable.

Sun Sep  7 07:45:35 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (basic2): In test basic2-64, match usernames with
	${username}.

	* root.c: Reindent a few things.